--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-/* don't forget the font family (poppins)*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
 *{
     padding:0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 /*generic*/
@@ -18,6 +19,7 @@ li {
     
 }
 h1 {
+
     font-size: 56px;
     margin-bottom: 24px;
     text-align: center;
@@ -34,27 +36,26 @@ button {
   transform: translateY(-2px);
  }
 
-
-a{
-    margin-left: 16px;
+p {
+    line-height: 1.3;
 }
 
-i {
-    padding: 24px 32px;
-    border: 1px solid rgb(0, 0, 0, 0.4);
-    margin-bottom: 16px;
-}
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+html {
+    scroll-behavior: smooth;
+}
+a:hover {
+    text-decoration: underline;
+}
 
 .text--blue {
     color: blue;
 }
-img {
- width: 100%;   
- height: 100%;
- max-height: 50vh;
- padding: 20px;
-}
+
 .container {
  padding: 56px 0;
 }
@@ -62,6 +63,9 @@ img {
 width: 100%;
 max-width:1200px;
 margin: 0 auto;
+}
+.no-cursor {
+    cursor: not-allowed;
 }
 /*nav*/
 nav{ 
@@ -71,6 +75,7 @@ nav{
     background-color: white;
    
 }
+
 
 .logo {
     width: 160px;
@@ -91,9 +96,7 @@ nav{
  padding: 8px;
  
 }
-.nav__link:hover{
-    text-decoration: underline;
-}
+
 
 .nav__link--primary {
     border: 2px solid blue;
@@ -106,6 +109,63 @@ nav{
     background-color: blue;
     text-decoration: none;
 }
+.btn__menu {
+    font-size: 40px;
+    background-color: transparent;
+    text-align: center;
+    border: none;
+    display: none;
+    color: blue;
+}
+.menu__open .menu__backdrop {
+    visibility:visible;
+    opacity :1; 
+    transform: translateX(0);
+}
+.menu__open {
+    max-height: 100vh;
+    overflow-Y:hidden;
+}
+
+.menu__backdrop{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #242424;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility:hidden;
+    opacity :0;
+    transform: translateX(80%);
+    transition : all 450ms ease;
+}
+
+.menu__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.menu__links {
+   padding: 32px 0;
+}
+.menu__link {
+    color: white;
+    text-decoration: none;
+    font-size: 40px;
+    font-weight: 700;
+}
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
 #landing {
     background-color: rgba(116, 200, 226, 0.989);
 }
@@ -123,7 +183,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding-top: 20px;
+    padding-top: 38px;
 }
 .header__description {
     display: flex;
@@ -131,7 +191,7 @@ header {
     align-items: center;
     
 }
-.header__button {
+.book__button {
     padding: 12px;
     font-size: 20px;
     border-radius: 10px;
@@ -140,12 +200,20 @@ header {
     color: white;
     transition: all 450ms;
 }
-.header__button:hover {
+.book__button:hover {
     background-color: white;
     color: blue;  
 }
 
 .header__img--wrapper {
+    padding: 20px;
+    display: flex;
+    z-index: 2;
+}
+.header__img {
+    width: 100%;   
+    height: 100%;
+    max-height: 50vh;
     padding: 20px;
 }
 
@@ -154,13 +222,14 @@ header {
 
 .highlight__wrapper {
     display: flex;
+    flex-wrap: wrap;
 
 }
 .highlight {
     padding: 0 24px;
     width: calc(100%/3);
     display: flex;
-    justify-content: center;
+    
     align-items: center;
     flex-direction: column;
     
@@ -175,10 +244,227 @@ header {
 
 .highlight__paragraph {
     text-align: center;
-    margin-top: 8px;
     font-size: 15px;
-    line-height: 1;
+    max-width: 280px;
 }
-.highlight__wrapper { }
- 
+.highlight__img {
+    padding: 25px 35px;
+    border: 1px solid rgb(0, 0, 0, 0.3);
+    margin-bottom: 24px;
+    font-size: 32px;
+    color: blue;
+    border-radius: 4px;
+}
+.highlight__subtitle {
+    font-size: 20px;
+    margin-bottom: 16px;
+    text-align: center;
+}
+#highlights::before, 
+#highlights::after {
+    content: "";
+    background: url(./assets/wave.svg);
+    position: absolute;
+    left: 0;
+    width: 101vw;
+    height: 12vw;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+}
+#highlights::before {
+    
+    transform: translateY(-100%);
+    top: 1px;
 
+}
+#highlights::after {
+    bottom: 1px;
+    transform: translateY(100%) rotate(180deg);
+}
+#highlights {
+    position: relative;
+    
+}
+
+
+/*
+Features
+*/
+
+#Features {
+    padding-top: 8vw;
+    background-color: rgba(116, 200, 226, 0.989);
+
+}
+
+
+.books {
+    display: flex;
+    flex-wrap: wrap;
+}
+.book {
+    width: 25%;
+    padding: 24px;
+
+}
+.book__img {
+    width: 100%;
+    max-height: 300px;
+    transition: all 300ms ease;
+    cursor: no-drop;
+}
+.book__img--wrapper {
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+  
+}
+
+.book:hover .book__img {
+    transform: scale(1.03);
+}
+
+.book__title {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.book__title:hover {
+    text-decoration: underline;
+    cursor: not-allowed;
+}
+
+.book__ratings {
+    margin-bottom: 8px;
+    color: gold;
+    
+}
+.book__price--normal {
+    text-decoration: line-through;
+    opacity: 0.4;
+    padding-right: 8px;
+}
+  #more-books {
+    background-color: rgba(116, 200, 226, 0.989);
+    
+  }
+  .more-books {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  /* 
+  FOOTER 
+  */
+
+  footer {
+    background-color: #242424;
+  }
+
+  .footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer__img--wrapper {
+   
+    display: flex;
+    
+  }
+  .footer__img {
+   width: 170px;
+  filter: grayscale(1) invert(1);
+
+  }
+  
+  .footer__links {
+    
+    max-width: 600px;
+    margin: 24px 0 ;
+  }
+
+  .footer__link, .footer__copyright {
+  color: white;
+  }
+
+
+  .footer__link {
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 24px;
+    padding: 0 8px;
+
+    transition: all 300ms ease;
+  }
+  .footer__link:hover {
+    opacity: 0.7;
+    transform: scale(1.1);
+    
+  }
+
+
+
+
+  /*
+  BreakPoint
+  */
+
+
+  /*
+  small phones Tablets Large smartphones*/
+
+  @media (max-width: 768px) {
+    .header__description {
+        padding: 0 24px;
+    }
+    h1{
+        font-size: 40px;
+    }
+    h2 {
+        font-size: 26px;
+    }
+    button {
+        font-size : 18px;
+    }
+    .book{ 
+        width:50%;
+    }
+
+    
+  }
+  /*small phones, Large Smartphones*/
+  @media (max-width:550px) {
+    .nav__links {
+        display: none;
+    }
+    .btn__menu {
+        display: block;
+    }
+    .highlight {
+        width: 100%;
+        
+    }
+    .highlight:not(:last-child) {
+        margin-bottom : 24px;
+    }
+  }
+
+  /*laptops*/
+
+  @media (max-height: 1030px) {
+    h1{
+        font-size: 40px;
+    }
+    h2 {
+        font-size: 26px;
+    }
+    button {
+        font-size : 18px;
+    }
+  }
