--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ p {
 body {
     max-width: 100vw;
     overflow-x: hidden;
+  height: 100%;
 }
 html {
     scroll-behavior: smooth;
@@ -166,11 +167,12 @@ nav{
     color: white;
 }
 
-#landing {
+#landing, #books__body {
     background-color: rgba(116, 200, 226, 0.989);
 }
 
 /* Header*/
+
 header {
     height: calc(100vh - 80px);
 }
@@ -407,7 +409,75 @@ Features
     transform: scale(1.1);
     
   }
+/* 
+**
 
+BOOKS PAGE
+
+**/
+
+  #books__main {
+   
+    flex: 1;
+}
+.books__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
+}
+.books__header--title{
+    margin-bottom: 0;
+}
+
+#books__body {
+ display: flex;
+ flex-direction: column;
+ min-height: 100vh;
+
+}
+select {
+    background-color: #ffff;
+    border-radius: 4px;
+    border: 1px solid #dcdfe6;
+    color: #606266;
+    height: 40px;
+    line-height: 40px;
+    outline: none;
+    padding: 0 16px;
+    width: 100%;
+    max-width: 200px;
+}
+.books__loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 60px;
+    font-size: 60px;
+    color: #0932d6;
+  }
+ 
+
+  .books__loading .books__loading--spinner {
+    display:block !important;
+  }
+  .books__loading--spinner {
+    display:none !important;
+  }
+  .fa-spinner {
+    animation: rotate 600ms infinite linear;
+  }
+  
+  @keyframes rotate {
+    0% {
+      transform: rotate(0);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
 
 
 
